# spore

./: .clangd  .gitignore  .gitmodules  Makefile  meson.build
.github/workflows/: release.yml
bootloader/: bootloader.h  elf.c  files.c  handoff.c  main.c  paging.c  topology.c  uefi.h  util.c
docs/goals/: spore-v3-goal.md  spore-v4-real-network-goal.md
kernel/: meson.build
kernel/src/: cell.c  ext2.c  main.c  ramfs.c  random.c  vfs.c
kernel/src/arch/aarch64/: boot.S  exceptions.c  smp.S  smp.c  sys_context.c  sys_exec.c  sys_file.c  sys_io.c  sys_ioctl.c  sys_mem.c  sys_misc.c  sys_net.c  sys_poll.c  sys_proc.c  sys_signal.c  sys_time.c  syscall.c  timer.c  vectors.S
kernel/src/drivers/: pl011.c  virtio_blk.c  virtio_net.c
kernel/src/elf/: loader.c
kernel/src/exec/: stack.c
kernel/src/include/: boot_info.h  cell.h  ext2.h  kprintf.h  kstr.h  mem.h  net.h  pl011.h  ramfs.h  random.h  vfs.h  virtio_blk.h
kernel/src/include/arch/aarch64/: exceptions.h  regs.h  smp.h  syscall_handlers.h  timer.h
kernel/src/include/elf/: loader.h
kernel/src/include/exec/: stack.h
kernel/src/include/mm/: pmm.h  vma.h  vmm.h
kernel/src/include/proc/: domain.h  fd.h  futex.h  io.h  memory.h  pipe.h  poll.h  process.h  procfs.h  procfs_format.h  procfs_text.h  signal.h  snapshot.h  socket.h  thread.h  tty.h
kernel/src/lib/: mem.c
kernel/src/mm/: pmm.c  vma.c  vmm.c
kernel/src/net/: net.c
kernel/src/proc/: domain.c  fd.c  futex.c  io.c  memory.c  pipe.c  policy.c  poll.c  process.c  procfs.c  procfs_text.c  signal.c  snapshot.c  socket.c  thread.c  tty.c
tests/: meson.build  random_stub.c  test_abi.c  test_elf.c  test_ext2.c  test_futex_model.c  test_net.c  test_pmm.c  test_ramfs.c  test_stack.c  test_thread_model.c  test_vma.c  test_vmm.c
tools/: build_image.py  run_qemu.py  run_qemu_shell.py
tools/src/: spore_image.c  spore_run.c
userland/: MIGRATION.md  README.md  image.manifest  meson.build  spore_v1_demo.c
userland/demos/: something  something-else.msh
userland/demos/cpuburn/: main.c  meson.build
userland/demos/escalate/: main.c  manifest  meson.build
userland/demos/memhog/: main.c  manifest  meson.build
userland/demos/peeker/: main.c  meson.build
userland/demos/signal-crash/: main.c  meson.build
userland/demos/spinner/: main.c  manifest  meson.build
userland/demos/writer/: main.c  manifest  meson.build
userland/etc/: dashrc  environment  hostname  hosts  meson.build  motd  profile
userland/etc/fastfetch/: config.jsonc
userland/etc/mycelium/: console.service  hostname.service  multi-user.target  network.service  network.target  trustd.service
userland/etc/ssl/certs/: ca-certificates.crt
userland/etc/update-motd.d/: 90-last-login
userland/lib/apk/db/: installed
userland/lib/mbedtls/: build.sh  meson.build
userland/lib/ncurses/: build.sh  meson.build
userland/lib/spore/: meson.build  spore.h  util.c  util.h
userland/lib/zlib/: build.sh  meson.build
userland/libexec/spore-test/pthread-demo/: main.c
userland/libexec/spore-test/udp-echo/: meson.build
userland/libexec/spore-test/udp-recv/: meson.build
userland/libexec/spore-test/udp-send/: main.c
userland/libexec/spore-test/uds-client/: main.c  meson.build
userland/libexec/spore-test/uds-server/: main.c  meson.build
userland/libexec/trustd/: main.c  meson.build
userland/tests/integration/: exec_child.c  image.manifest  main.c  meson.build
userland/usr/local/: htoprc
userland/usr/local/share/vim/vim92/: defaults.vim
